--- a/resources/views/line_of_business/construction/page/42/index.html
+++ b/resources/views/line_of_business/construction/page/42/index.html
@@ -1599,7 +1599,7 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
 			<div>
             
 							<div class="post-box">
-                        <a href="../../../../project/ameristar-casino-black-hawk-hotel-resort-2/index.html">
+                        <a href="{{route('projects.ameristar-casino-black-hawk-hotel-resort-2')}}">
                             <div class="news-post-image" style="background-image: url({{asset('wp-content/uploads/2017/08/Ameristar-Casion-Black-Hawk_hero-480x320.jpg')}});">
                                                         	<img width="311" height="225" src="{{asset('wp-content/uploads/2017/08/Ameristar-Casion-Black-Hawk_hero-311x225.jpg')}}" class="attachment-news-thumbnail size-news-thumbnail wp-post-image" alt="" />                                                        </div>
                             <div class="news-post-meta">
