--- a/resources/views/line_of_business/construction/page/44/index.html
+++ b/resources/views/line_of_business/construction/page/44/index.html
@@ -1659,7 +1659,7 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
             
             
             				<div class="post-box">
-                        <a href="../../../../project/armed-forces-retirement-home-afrh-new-commons-healthcare-center-the-scott-project/index.html">
+                        <a href="{{route('projects.armed-forces-retirement-home-afrh-new-commons-healthcare-center-the-scott-project')}}">
                             <div class="news-post-image" style="background-image: url({{asset('wp-content/uploads/2017/08/AFRH-Hero-Image-480x320.jpg')}});">
                                                         	<img width="311" height="225" src="{{asset('wp-content/uploads/2017/08/AFRH-Hero-Image-311x225.jpg')}}" class="attachment-news-thumbnail size-news-thumbnail wp-post-image" alt="" loading="lazy" />                                                        </div>
                             <div class="news-post-meta">
