--- a/resources/views/line_of_business/construction/page/30/index.html
+++ b/resources/views/line_of_business/construction/page/30/index.html
@@ -1679,7 +1679,7 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
             
             
             				<div class="post-box">
-                        <a href="../../../../project/2400-nueces/index.html">
+                        <a href="{{route('projects.2400-nueces')}}">
                             <div class="news-post-image" style="background-image: url({{asset('wp-content/uploads/2017/08/2400-Nueces-Large-480x320.jpg')}});">
                                                         	<img width="311" height="225" src="{{asset('wp-content/uploads/2017/08/2400-Nueces-Large-311x225.jpg')}}" class="attachment-news-thumbnail size-news-thumbnail wp-post-image" alt="" loading="lazy" />                                                        </div>
                             <div class="news-post-meta">
