--- a/resources/views/recruiting-events/index.html
+++ b/resources/views/recruiting-events/index.html
@@ -988,9 +988,9 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
                                          <div class="project-content">
 
                                          	<h3>Aviation</h3>
-<p><a href="{{route('projects.eagle-county-regional-airport-expansion-remodel')}}')}}" ><img loading="lazy" class="alignnone" src="{{asset('wp-content/uploads/2021/07/Eagle-County-Airport-Website.jpg')}}" alt="" width="300" height="200" /></a></p>
+<p><a href="{{route('projects.eagle-county-regional-airport-expansion-remodel')}}" ><img loading="lazy" class="alignnone" src="{{asset('wp-content/uploads/2021/07/Eagle-County-Airport-Website.jpg')}}" alt="" width="300" height="200" /></a></p>
 <h5><span style="color: #ffffff;">Featured Aviation Case Study</span></h5>
-<h4><a href="{{route('projects.eagle-county-regional-airport-expansion-remodel')}}')}}" >Eagle County Regional Airport Expansion Remodel</a></h4>
+<h4><a href="{{route('projects.eagle-county-regional-airport-expansion-remodel')}}" >Eagle County Regional Airport Expansion Remodel</a></h4>
 
                                         </div>
 
@@ -1388,22 +1388,22 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
                                             <li><a href="{{route('about.technology')}}" >Technology</a></li>
 
 											
-                                            <li><a href="{{route('about.history')}}')}}" >History</a></li>
+                                            <li><a href="{{route('about.history')}}" >History</a></li>
 
 											
-                                            <li><a href="{{route('about.community')}}')}}" >Community</a></li>
+                                            <li><a href="{{route('about.community')}}" >Community</a></li>
 
 											
-                                            <li><a href="{{route('about.employee-diversity')}}')}}" >Diversity and Inclusion</a></li>
+                                            <li><a href="{{route('about.employee-diversity')}}" >Diversity and Inclusion</a></li>
 
 											
-                                            <li><a href="{{route('about.news-center')}}')}}" >News Center</a></li>
+                                            <li><a href="{{route('about.news-center')}}" >News Center</a></li>
 
 											
-                                            <li><a href="{{route('about.leadership')}}')}}" >Leadership</a></li>
+                                            <li><a href="{{route('about.leadership')}}" >Leadership</a></li>
 
 											
-                                            <li><a href="{{route('about.recognition-awards')}}')}}" >Recognition & Awards</a></li>
+                                            <li><a href="{{route('about.recognition-awards')}}" >Recognition & Awards</a></li>
 
 											
                                             <li><a href="../trade-partners/index.html')}}" >Trade Partners</a></li>
@@ -1506,7 +1506,7 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
                                             <h3>Diversity and Inclusion</h3>
 <p><img loading="lazy" class="size-medium wp-image-2539 alignnone" src="{{asset('wp-content/uploads/2017/07/dsc_0085-300x242.jpg')}}" alt="" width="300" height="200" /></p>
 <h5><span style="color: #ffffff;">Creating and Inclusive Environment</span></h5>
-<h4><a href="{{route('about.employee-diversity')}}')}}" >Cultivating a diverse workforce is an important part of Alticor Inc’ culture.</a></h4>
+<h4><a href="{{route('about.employee-diversity')}}" >Cultivating a diverse workforce is an important part of Alticor Inc’ culture.</a></h4>
 
                                         </div>
 
