--- a/resources/views/project/701-rio/index.html
+++ b/resources/views/project/701-rio/index.html
@@ -1900,10 +1900,10 @@
                                             <li><a href="../../what-we-do/development/index.html">Development</a></li>
 
 
-                                            <li><a href="../../what-we-do/construction/index.html">Construction</a></li>
+                                            <li><a href="{{route('what-we-do.construction')}}">Construction</a></li>
 
 
-                                            <li><a href="../../what-we-do/facility-services/index.html">Facility
+                                            <li><a href="{{route('what-we-do.facility-services')}}">Facility
                                                     Services</a></li>
 
 
@@ -1958,7 +1958,7 @@
                                                     srcset="{{asset('wp-content/uploads/2017/07/construction-300x200.jpg 300w, {{asset('wp-content/uploads/2017/07/construction.jpg 600w"
                                                     sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h5><span style="color: #ffffff;">Building Landmark Properties</span></h5>
-                                            <h4><a href="../../what-we-do/construction/index.html">From preconstruction
+                                            <h4><a href="{{route('what-we-do.construction')}}">From preconstruction
                                                     through constructability and field management – Alticor Inc delivers
                                                     superior results on time and on budget.</a></h4>
 
@@ -1974,7 +1974,7 @@
                                                     srcset="{{asset('wp-content/uploads/2018/10/Technician-in-Server-Room-300x225.jpg 300w, {{asset('wp-content/uploads/2018/10/Technician-in-Server-Room-768x576.jpg 768w, {{asset('wp-content/uploads/2018/10/Technician-in-Server-Room-1024x768.jpg 1024w"
                                                     sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h5><span style="color: #ffffff;">Optimizing Operations</span></h5>
-                                            <h4><a href="../../what-we-do/facility-services/index.html">Even after
+                                            <h4><a href="{{route('what-we-do.facility-services')}}">Even after
                                                     construction is complete, we help our clients achieve their property
                                                     goals and objectives.</a></h4>
 
