--- a/resources/views/line_of_business/services/page/3/index.html
+++ b/resources/views/line_of_business/services/page/3/index.html
@@ -1101,10 +1101,10 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
                                         <li><a href="../../../../what-we-do/development/index.html">Development</a></li>
 
                                         
-                                        <li><a href="../../../../what-we-do/construction/index.html">Construction</a></li>
+                                        <li><a href="{{route('what-we-do.construction')}}">Construction</a></li>
 
                                         
-                                        <li><a href="../../../../what-we-do/facility-services/index.html">Facility Services</a></li>
+                                        <li><a href="{{route('what-we-do.facility-services')}}">Facility Services</a></li>
 
                                         
                                         
@@ -1144,7 +1144,7 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
                                             <h3>Construction</h3>
 <p><img loading="lazy" class="wp-image-2525 size-medium alignnone" src="{{asset('wp-content/uploads/2017/07/construction-300x200.jpg')}}" alt="" width="300" height="200" srcset="{{asset('wp-content/uploads/2017/07/construction-300x200.jpg 300w, {{asset('wp-content/uploads/2017/07/construction.jpg 600w" sizes="(max-width: 300px) 100vw, 300px" /></p>
 <h5><span style="color: #ffffff;">Building Landmark Properties</span></h5>
-<h4><a href="../../../../what-we-do/construction/index.html">From preconstruction through constructability and field management – Alticor Inc delivers superior results on time and on budget.</a></h4>
+<h4><a href="{{route('what-we-do.construction')}}">From preconstruction through constructability and field management – Alticor Inc delivers superior results on time and on budget.</a></h4>
 
                                         </div>
 
@@ -1154,7 +1154,7 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
                                             <h3>Facility Services</h3>
 <p><img loading="lazy" class="alignright size-medium wp-image-7027" src="{{asset('wp-content/uploads/2018/10/Technician-in-Server-Room-300x225.jpg')}}" alt="" width="300" height="225" srcset="{{asset('wp-content/uploads/2018/10/Technician-in-Server-Room-300x225.jpg 300w, {{asset('wp-content/uploads/2018/10/Technician-in-Server-Room-768x576.jpg 768w, {{asset('wp-content/uploads/2018/10/Technician-in-Server-Room-1024x768.jpg 1024w" sizes="(max-width: 300px) 100vw, 300px" /></p>
 <h5><span style="color: #ffffff;">Optimizing Operations</span></h5>
-<h4><a href="../../../../what-we-do/facility-services/index.html">Even after construction is complete, we help our clients achieve their property goals and objectives.</a></h4>
+<h4><a href="{{route('what-we-do.facility-services')}}">Even after construction is complete, we help our clients achieve their property goals and objectives.</a></h4>
 
                                         </div>
 
