--- a/resources/views/rebuilding-texas-together/index.html
+++ b/resources/views/rebuilding-texas-together/index.html
@@ -1014,9 +1014,9 @@ article.mec-single-event.mec-single-modern.mec-single-modal > div.col-md-8{
                                          <div class="project-content">
 
                                          	<h3>Education</h3>
-<p><a href="../project/bethune-cookman-university-residence-halls/"><img loading="lazy" class="alignnone wp-image-954 size-full" src="{{asset('wp-content/uploads/2017/06/education-menu.jpg')}}" alt="" width="300" height="200" /></a></p>
+<p><a href="../project/bethune-cookman-university-residence-halls')}}"><img loading="lazy" class="alignnone wp-image-954 size-full" src="{{asset('wp-content/uploads/2017/06/education-menu.jpg')}}" alt="" width="300" height="200" /></a></p>
 <h5><span style="color: #ffffff;">Featured Education Case Study</span></h5>
-<h4><a href="../project/bethune-cookman-university-residence-halls/">Bethune-Cookman University Residence Halls</a></h4>
+<h4><a href="../project/bethune-cookman-university-residence-halls')}}">Bethune-Cookman University Residence Halls</a></h4>
 
                                         </div>
 
