--- a/resources/views/project/701-rio/index.html
+++ b/resources/views/project/701-rio/index.html
@@ -2419,7 +2419,7 @@
                                                     sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <p>&nbsp;</p>
                                             <h5><span style="color: #ffffff;">Celebrating 80 Years</span></h5>
-                                            <h4><a href="//about/history/">From one man’s
+                                            <h4><a href="{{route('about.history')}}">From one man’s
                                                     dream to one of America’s most successful contractors.</a></h4>
 
                                         </div>
@@ -2434,7 +2434,7 @@
                                                     srcset="{{asset('wp-content/uploads/2017/07/community-300x200.jpg 300w, {{asset('wp-content/uploads/2017/07/community.jpg 600w"
                                                     sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h5><span style="color: #ffffff;">Doing Our Part</span></h5>
-                                            <h4><a href="//about/community/">Building
+                                            <h4><a href="{{route('about.community')}}">Building
                                                     Stronger Communities Together.</a></h4>
 
                                         </div>
@@ -2457,12 +2457,12 @@
                                         <div class="project-content">
 
                                             <h3>News Center</h3>
-                                            <p><a href="//about/news-center/"><img
+                                            <p><a href="{{route('about.news-center')}}"><img
                                                         loading="lazy" class="alignnone"
                                                         src="{{asset('wp-content/uploads/2017/05/news-news.jpg')}}"
                                                         alt="" width="300" height="200" /></a></p>
                                             <h5><span style="color: #ffffff;">What’s Happening</span></h5>
-                                            <h4><a href="//about/news-center/">Stay in the
+                                            <h4><a href="{{route('about.news-center')}}">Stay in the
                                                     know with Alticor Inc news and events.</a></h4>
 
                                         </div>
@@ -2477,7 +2477,7 @@
                                                     srcset="{{asset('wp-content/uploads/2017/07/leadership-300x200.jpg 300w, {{asset('wp-content/uploads/2017/07/leadership.jpg 600w"
                                                     sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h5><span style="color: #ffffff;">Empowered Teams</span></h5>
-                                            <h4><a href="//about/leadership/">Project
+                                            <h4><a href="{{route('about.leadership')}}">Project
                                                     leadership is one of the cornerstones of our company structure.</a>
                                             </h4>
 
@@ -2493,7 +2493,7 @@
                                                     srcset="{{asset('wp-content/uploads/2017/07/awards-300x200.jpg 300w, {{asset('wp-content/uploads/2017/07/awards.jpg 600w"
                                                     sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h5><span style="color: #ffffff;">Jobs Well Done</span></h5>
-                                            <h4><a href="//about/recognition-awards/">At
+                                            <h4><a href="{{route('about.recognition-awards')}}">At
                                                     Alticor Inc, our work speaks for itself.</a></h4>
 
                                         </div>
@@ -2506,7 +2506,7 @@
                                                     src="{{asset('wp-content/uploads/2017/04/Subcontractor-Outreach-300x247.jpg')}}"
                                                     alt="" width="300" height="200" /></p>
                                             <h5><span style="color: #ffffff;">Partnering with Alticor Inc</span></h5>
-                                            <h4><a href="//about/recognition-awards/">We
+                                            <h4><a href="{{route('about.recognition-awards')}}">We
                                                     welcome the opportunity to work with trade partners who share our
                                                     dedication and goals.</a></h4>
 
